Fix button overflow when using `.u-fullWidth`

--- a/stylesheets/_utility.scss
+++ b/stylesheets/_utility.scss
@@ -128,4 +128,5 @@
 // =============================================================================
 .u-fullWidth {
   width: 100% !important;
+  box-sizing: border-box !important;
 }
